--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "ai_project using crewAI"
 authors = [
     { name = "vishal" }
 ]
-requires-python = ">=3.10,<3.13"
+requires-python = "==3.11.9"
 
 dependencies = [
     "crewai[tools]",
